r2 fix:lang file

--- a/src/main/resources/assets/flammpfeil.reincarnation/lang/ja_JP.lang
+++ b/src/main/resources/assets/flammpfeil.reincarnation/lang/ja_JP.lang
@@ -1,5 +1,5 @@
-item.flammpfeil.reincarnation.spirit.bottled=瓶詰め魂
-item.flammpfeil.reincarnation.spirit.egg=祝福儀礼済み魂
-item.flammpfeil.reincarnation.spirit=砕けた魂
-item.flammpfeil.reincarnation.spiritfragmentbottle=瓶詰めの砕けた魂
+item.flammpfeil.reincarnation.spirit.bottled.name=瓶詰め魂
+item.flammpfeil.reincarnation.spirit.egg.name=祝福儀礼済み魂
+item.flammpfeil.reincarnation.spirit.name=砕けた魂
+item.flammpfeil.reincarnation.spiritfragmentbottle.name=瓶詰めの砕けた魂
 flammpfeil.reincarnation.spirit=傷ついた魂
