--- a/src/main/resources/assets/flammpfeil.reincarnation/lang/en_US.lang
+++ b/src/main/resources/assets/flammpfeil.reincarnation/lang/en_US.lang
@@ -1,5 +1,5 @@
-item.flammpfeil.reincarnation.spirit.bottled=BottledSpirit
-item.flammpfeil.reincarnation.spirit.egg=BlessingSpirit
-item.flammpfeil.reincarnation.spirit=SpiritFragment
-item.flammpfeil.reincarnation.spiritfragmentbottle=BottledSpiritFragment
+item.flammpfeil.reincarnation.spirit.bottled.name=BottledSpirit
+item.flammpfeil.reincarnation.spirit.egg.name=BlessingSpirit
+item.flammpfeil.reincarnation.spirit.name=SpiritFragment
+item.flammpfeil.reincarnation.spiritfragmentbottle.name=BottledSpiritFragment
 flammpfeil.reincarnation.spirit=Spirit
